--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "types": "./dist/index.d.ts",
   "scripts": {
     "build": "build",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepare": "husky install",
+    "test": "echo \"No tests yet\""
   },
   "keywords": [
     "calcit",
@@ -17,6 +18,9 @@
   "author": "calcit-admin",
   "license": "MIT",
   "devDependencies": {
+    "@commitlint/cli": "^19.3.0",
+    "@commitlint/config-conventional": "^19.2.2",
+    "husky": "^8.0.3",
     "tsup": "^8.1.0",
     "typescript": "^5.5.3"
   }
