--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "calcit",
   "version": "0.0.1",
-  "description": "Your go to advanced calculators package.",
+  "description": "Your go-to advanced calculators package.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "build",
+    "build":"tsc",
     "prepare": "husky install",
-    "test": "echo \"No tests yet\""
+    "test": "echo \"No tests yet\"",
+      "start": "node dist/index.js"
   },
   "keywords": [
     "calcit",
