--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@calcit-admin/calcit",
-  "version": "1.0.1",
+  "name": "calc-it-v1",
+  "version": "1.1.1",
   "description": "Your go-to advanced calculators package.",
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
