--- a/package.json
+++ b/package.json
@@ -34,5 +34,8 @@
     "husky": "^8.0.3",
     "tsup": "^8.1.0",
     "typescript": "^5.5.3"
+  },
+  "dependencies": {
+    "axios": "^1.7.7"
   }
 }
